Bug 101708 - GSoC table template: Crash in save as ODF 1.2 strict or ODF 1.0
Summary: GSoC table template: Crash in save as ODF 1.2 strict or ODF 1.0
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0
Keywords:
Depends on:
Blocks: Table-Styles Writer-Table-Styles
  Show dependency treegraph
 
Reported: 2016-08-24 19:55 UTC by Regina Henschel
Modified: 2017-05-01 23:40 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Contains table template. It has been saved as ODF 1.2 extended (13.26 KB, application/vnd.oasis.opendocument.text)
2016-08-24 19:55 UTC, Regina Henschel
Details
Screenshot of the error message (17.68 KB, image/png)
2016-08-24 19:55 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2016-08-24 19:55:13 UTC
Created attachment 127004 [details]
Contains table template. It has been saved as ODF 1.2 extended

Open the attached document. It contains a table template. Set LibreOffice to saving in format ODF 1.2 (strict) or ODF 1.0. Save the document. Crash. A picture of the error message is attached.

I have saved the file in ODF 1.2 and ODF 1.0 without problems before the table template was defined and applied, but the styles already set.

I have use the Version: 5.3.0.0.alpha0+
Build ID: d5fab973d0af95c433c5f6a9492014f7db642489
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-08-24_00:07:50
Locale: de-DE (de_DE); Calc: group
Comment 1 Regina Henschel 2016-08-24 19:55:49 UTC
Created attachment 127005 [details]
Screenshot of the error message
Comment 2 Regina Henschel 2016-08-25 11:27:22 UTC
If I use Version: 5.3.0.0.alpha0+
Build ID: 1e84b23839d96068c862e746c9162db79d2c8c62
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2016-08-25_05:49:25
Locale: de-DE (de_DE); Calc: group
there is no assertion, but the produced ODF is invalid, because it still contains the attributes, which are originally in loext namespace, but now they have no namespace at all.
Comment 3 Yousuf Philips (jay) (retired) 2016-09-03 14:34:07 UTC
Might be a windows only issue or might be something that has already been resolved, as i couldnt reproduce it on linux. Would be good to retest to see if it is still there.

Version: 5.3.0.0.alpha0+
Build ID: 139d3b3e8b157c1f365f888126269f0902acbaa2
CPU Threads: 2; OS Version: Linux 3.19; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-08-26_00:01:39
Locale: en-US (en_US.UTF-8); Calc: group
Comment 4 Caolán McNamara 2016-09-21 20:00:42 UTC
I can confirm under Linux. It needs to be a dbgutil build for the assert to fire.
Comment 5 Commit Notification 2016-09-21 20:21:17 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1f6af12705ddcf14eb4617a6f2f523b844e3f6db

Resolves: tdf#101708 only export loext table attributes in 'extended' variant

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.