Resolves: tdf#101708 only export loext table attributes in 'extended' variant

Change-Id: I35f297e94e1eb6ed56020cf69102fad4c4d1e7f4